--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
-.display-4 {
-    text-align: center;
-    padding: 100px;
+h1, h2, h3, h4, h5, h6 {
+font-family: 'Yusei Magic', sans-serif;
 }
 
+body {
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 20px;
+}
+
+/* hero_jumbotron section */
 .jumbotron {
    margin-top: 10px;
    background-color: black;
@@ -12,19 +17,13 @@
    margin-bottom: 100px;
 }
 
-.project_overview{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
 
-
+/* Nav section */
 
 .customNav {
    
     width: 100%;
-    
+    padding: 20px;
     background-color: black !important;
     margin-bottom: 20px;
    
@@ -52,3 +51,185 @@
   .customNav a {
     color: white !important;
   }
+
+
+/* Project Overview */
+
+.project_overview{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: right;
+    background-color: whitesmoke;
+}
+
+.display-4 {
+    text-align: center;
+    padding: 100px;
+}
+
+
+.project_overview h3{
+    font-size: 36px;
+    padding-bottom: 20px;
+
+}
+
+
+
+/* first image before content */
+
+#foodie_pic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+
+/* progress bar*/
+
+.progress-bar {
+  padding: 50px;
+    
+}
+/* Content 1*/
+
+h2 {
+    text-align: center;
+    padding-bottom: 100px;
+    font-size: 48px !important;
+    font-weight: 700;
+    padding-top: 200px;
+    background-color: black;
+    color: white;
+}
+
+.media img {
+    height: 50%;
+    width: 50%;
+    padding-left: 50px;
+    
+}
+.content_r {
+  padding-left: 100px;
+  margin-bottom: 200px;
+  
+  height: 20%;
+   
+}
+
+.r_content {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+/* content 2*/
+
+.progress-bar {
+    padding-top: 50px;
+}
+
+.media-body {
+ padding-top: 50px;
+ padding-left: 50px;
+}
+
+.def_content img {
+    height: 50%;
+    width: 50%;
+    padding-left: 100px;
+    margin-left: 100px;
+}
+
+/* ideation */
+
+.i_content {
+    padding-left: 10px;
+    margin-left: 10px;
+}
+
+
+/* content 4*/
+.prototype {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+/* content5 */
+.def_content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    margin: 100px;
+} 
+
+/* conclusion */
+
+.next_steps h3 {
+
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 20px;
+}
+
+.step_list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 5px;
+    line-height: 50px;
+}
+
+.last_sen {
+    text-align: center !important;
+}
+
+
+/* footer */
+footer{
+    text-align: center;
+    padding: 3px;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: flex-start;
+}
+
+footer .fa{
+    flex-grow: 1;
+    text-align: right;
+    color:white;
+   
+}
+
+footer p{
+    text-align: left;
+
+}
+
+.copyright{
+    align-items: baseline;
+    text-align: center;
+    flex-grow: 2;
+    font-size: 12px;
+    padding-top: 100px;
+    padding-left: 429px;
+}
+
+
+
+.footer_name{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
